add delete feature

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -1,19 +1,23 @@
 {
-    "expense_tracker": "Expense Tracker",
-    "add_expense": "Add Expense",
-    "description": "Description",
-    "select_date": "Select a Date",
-    "select_category": "Select a Category",
-    "amount": "Amount",
-    "enter_amount": "Enter amount",
-    "date_hint": "DD/MM/YYYY",
-    "add": "Add",
-    "expense": "Expense",
-    "today": "Today",
-    "amount_empty": "Amount cannot be empty",
-    "category_empty": "Category cannot be empty",
-    "date_empty": "Date cannot be empty",
-    "add_expense_success": "An expense has beend added",
-    "add_expense_failed": "Failed to add an expense",
-    "enter_description_here": "Enter your description here..."
+    "expense_tracker": "Expense Management",
+    "add_expense": "Add a New Expense",
+    "description": "Expense Description",
+    "select_date": "Choose a Date",
+    "select_category": "Choose a Category",
+    "amount": "Total Amount",
+    "enter_amount": "Please enter the amount",
+    "date_hint": "Format: DD/MM/YYYY",
+    "add": "Submit",
+    "expense": "Expense Record",
+    "today": "Today's Expenses",
+    "amount_empty": "Amount cannot be left blank",
+    "category_empty": "Please select a category",
+    "date_empty": "Please choose a date",
+    "spent_this_week": "Expenditure This Week",
+    "add_expense_success": "Expense successfully added",
+    "delete_expense_success": "Expense successfully deleted",
+    "add_expense_failed": "Unable to add expense",
+    "delete_expense_failed": "Unable to delete expense",
+    "not_having_expenses": "No expenses recorded yet",
+    "enter_description_here": "Add your description here..."
 }
